# GPS

./: .env  .gitignore  README.md  cool-stuff.md  kill_backend.sh  package-lock.json  package.json  pyproject.toml  reflection.md
apps/web-client/: .env  index.html  package.json  vite.config.ts
apps/web-client/src/: App.tsx
backend/: .env  docs.md  get_image.py  main.py  pyproject.toml  tests.py
backend/api/: README.md  main.py
backend/api/routes/: tiles.py
backend/services/core/: config.py  utils.py
backend/services/maps/: cog_clients.py  tiles.py
docs/: ARCHITECTURE.md  quick-docs.md  reflection.md  tmux_stuff.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: Map.tsx
infrastructure/docker/: Dockerfile.postgres
scripts/: build_run_pgdb.sh  pgstac_migration.sh  run.sh  run_backend.sh  run_frontend.sh  run_stac_api.sh  start_pgdb.sh
services/backend-api/: config.py  main.py  pyproject.toml
services/backend-api/api/: config.py  main.py
services/stac-api/: README.md  main.py  pyproject.toml
tools/: download_sentinal.py  ingest_tiffs.py  pyproject.toml
