[project]
name = "gps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypgstac[psycopg]>=0.9.10",
    "rio-cogeo>=5.4.2",
]

[tool.uv.workspace]
members = [
    "packages/cog",
    "packages/python-utils",
    "services/backend-api",
    "services/stac-api",
    "tools",
    "packages/model-serving",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
